# android_analysis

./: .gitignore  README.md  build.gradle  settings.gradle  sign.jks
android_helper/: build.gradle
android_helper/src/main/java/com/android_helper/: CommandUtil.java  Main.java
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  bionic.cpp  bionic.h  common_hook.cpp  common_hook.h  dump_so.cpp  dump_so.h  enum_jni_symbols.cpp  find_jni_native_addr.cpp  jni.cpp  libc.cpp  load_dex.cpp  main.cpp  opengl.cpp  passssl.cpp  test.cpp
app/src/main/cpp/analyse/: pangle5504.cpp  pangle5810.cpp
app/src/main/cpp/base/: CMakeLists.txt  hook.cpp  hook.h  when_hook.cpp  when_hook.h  when_so_load.cpp  when_so_loaded.cpp
app/src/main/cpp/global/: CMakeLists.txt  global.cpp  global.h
app/src/main/cpp/hook_ssl/: main.cpp
app/src/main/cpp/jni_trace/: art_method_name.cpp  art_method_name.h  format.cpp  format.h  format_voerload.cpp  frida.cpp  hook.h  hook_array.cpp  hook_clz.cpp  hook_field.cpp  hook_method.cpp  hook_other.cpp  hook_string.cpp  jni_helper.h  jni_sym.cpp  jni_sym.h  jni_treace.cpp  jni_treace.h  log_maker.cpp  log_maker.h  parse_java_sig.cpp  parse_java_sig.h
app/src/main/cpp/jni_trace/unused/: enum_jni_static_method.cpp  enum_jni_static_method.h  global_code.cpp  global_code.h  jni_env_hook.cpp  jni_env_hook.h  jni_native_hook.cpp  jni_native_hook.h  methods_info.cpp  methods_info.h  methods_json.cpp  printf_args_helper.cpp  printf_args_helper.h  printf_java_args.cpp  printf_java_args.h  switch.h
app/src/main/cpp/log2file/: app_file_writer.cpp  app_file_writer.h
app/src/main/cpp/republic/: CMakeLists.txt  hide_api.cpp
app/src/main/cpp/sniffer/: CMakeLists.txt  sniffer.cpp
app/src/main/cpp/sqllite/: CMakeLists.txt  sql.cpp  sql.h
app/src/main/cpp/test/: test.cpp
app/src/main/cpp/third/: CMakeLists.txt
app/src/main/cpp/third/argparse/: argparse.hpp
app/src/main/cpp/third/byopen/: hack_dlopen.c  hack_dlopen.h
app/src/main/cpp/third/dobby/: CMakeLists.txt
app/src/main/cpp/third/http/: httplib.h
app/src/main/cpp/third/http_server/: http_server.cpp  http_server.hpp  mongoose.cpp  mongoose.hpp
app/src/main/cpp/third/hv/: hconfig.h
app/src/main/cpp/third/json/: json.h  json_helper.cpp  json_helper.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
app/src/main/cpp/third/libunwind/: Android.bp  CMakeLists.txt  DexFile.cpp  DexFile.h  DexFiles.cpp  DwarfCfa.cpp  DwarfSection.cpp  Elf.cpp  ElfInterface.cpp  GlobalDebugImpl.h  JitDebug.cpp  LocalUnwinder.cpp  MapInfo.cpp  Maps.cpp  Memory.cpp  MemoryCache.h  MemoryMte.cpp  Symbols.cpp  ThreadUnwinder.cpp  Unwinder.cpp
app/src/main/cpp/third/libunwind/android-base/: errno_restorer.h  file.cpp  file.h  logging.h  macros.h  off64_t.h  strings.cpp  strings.h  unique_fd.h  utf8.h
app/src/main/cpp/third/libunwind/include/: GlobalDebugInterface.h
app/src/main/cpp/third/libunwind/include/unwindstack/: Elf.h  ElfInterface.h  LocalUnwinder.h  MapInfo.h  Maps.h  Memory.h  SharedString.h  Unwinder.h
app/src/main/cpp/third/libunwind/lzma/: CMakeLists.txt
app/src/main/cpp/third/libunwind/lzma/CPP/7zip/UI/Common/: EnumDirItems.cpp
app/src/main/cpp/third/libunwind/procinfo/: process_map.h
app/src/main/cpp/third/libunwind/tools/: unwind_info.cpp  unwind_reg_info.cpp  unwind_symbols.cpp
app/src/main/cpp/third/log2file/: CMakeLists.txt  app_file_writer.cpp  app_file_writer.h
app/src/main/cpp/third/md5/: md5.cpp  md5.h
app/src/main/cpp/third/selinux/libselinux/include/selinux/: selinux.h
app/src/main/cpp/third/tinyxml2/: tinyxml2.cpp  tinyxml2.h
app/src/main/cpp/third/utils/: copper.hpp  java_vm.cpp  java_vm.h  jni_helper.cpp  jni_helper.hpp  linux_helper.cpp  linux_helper.h  log.cpp  log.h  macro_helper.h  map_helper.h  meminfo.cpp  meminfo.h  stack.asm  string_match.h  thread_poool.h  utils.cpp  utils.h  wait_group.h
app/src/main/cpp/trace/: CMakeLists.txt  vm.cpp  vm.h
app/src/main/cpp/trace/QBDI/: Callback.h  Errors.h  InstAnalysis.h  Logs.h  Memory.h  Memory.hpp  Options.h  Platform.h  State.h  VM.h  VM_C.h  Version.h
app/src/main/cpp/unused/: aqy.cpp  hook_dns.cpp  libcompatible.cpp  pangle_4x.cpp  shumei.cpp  stub.asm  unity.cpp
app/src/main/java/com/andriod/analyse/: FileManger.java  MainActivity.java  MyApplication.java  Test.java
app/src/main/java/com/android/analyse/: FileManger.java  MainActivity.java  MyApplication.java  Test.java
app/src/main/java/com/common/: Reflect.java  Wait.java  log.java  random.java  utils.java
app/src/main/java/com/common/tools/: ClassBase.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
frida/: analyse.js  frida_helper.js
frida_helper/: build.gradle
frida_helper/src/main/: AndroidManifest.xml
frida_helper/src/main/java/com/frida/: Reflect.java  Reflect2Json.java  frida_helper.java  log.java
frida_helper/src/main/java/com/fucker/gson/: AnonymousAndLocalClassExclusionStrategy.java  BaseMapTypeAdapter.java  Cache.java  CamelCaseSeparatorNamingPolicy.java  CircularReferenceException.java  CompositionFieldNamingPolicy.java  DefaultConstructorAllocator.java  DefaultTypeAdapters.java  DelegatingJsonElementVisitor.java  DisjunctionExclusionStrategy.java  Escaper.java  ExclusionStrategy.java  ExposeAnnotationDeserializationExclusionStrategy.java  ExposeAnnotationSerializationExclusionStrategy.java  FieldAttributes.java  FieldNamingPolicy.java  FieldNamingStrategy.java  FieldNamingStrategy2.java  FieldNamingStrategy2Adapter.java  Gson.java  GsonBuilder.java  InnerClassExclusionStrategy.java  InstanceCreator.java  JavaFieldNamingPolicy.java  JsonArray.java  JsonArrayDeserializationVisitor.java  JsonDeserializationContext.java  JsonDeserializationContextDefault.java  JsonDeserializationVisitor.java  JsonDeserializer.java  JsonDeserializerExceptionWrapper.java  JsonElement.java  (+43 more)
gradle/: common.gradle
gradle/wrapper/: gradle-wrapper.properties
(+90 files in other folders)
